# UsageGrid

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  check_midnight.py  claude_monitor_analysis.md  config.json  debug_detailed.py  debug_lite.py  debug_rolling.py  debug_session_simple.py  debug_simple.py  debug_tokens.py  demo_waterfall.py  find_session_start.py  pyproject.toml  requirements-dev.txt  requirements.txt  test_api_responses.py  test_async.py  test_claude_reader.py  test_claude_reader_updated.py  test_correct_session.py  test_current_session.py  test_demo.py  test_final_session.py  test_find_session.py  test_lite_app.py  test_real_apis.py  test_real_simple.py  test_rolling_session.py  test_run.py  test_session.py  test_session_boundary.py  test_session_debug.py  test_session_logic.py  test_session_times.py  test_token_breakdown.py  test_tz_debug.py  (+3 more)
docs/: API.md  ui_description.md  usagegrid-data.md
src/: main.py  main_async.py  main_async_clean.py  main_modular.py  main_real_simple.py  main_screenshot.py  main_simple_async.py  main_simple_lite.py
src/core/: cache_db.py  database.py  default_config.py  paths.py  polling_engine.py
src/providers/: anthropic_adapter.py  claude_code_reader.py  claude_code_reader_optimized.py  claude_code_session.py  huggingface_adapter.py  openai_adapter.py  openrouter_adapter.py
src/ui/: __init__.py  async_main_window.py  base_card.py  card_registry.py  claude_code_card.py  layout_manager.py  main_window.py  openai_card.py  openrouter_card.py  simple_card.py  simple_main_window.py  theme_manager.py
(+12 files in other folders)
